--- a/style.css
+++ b/style.css
@@ -13,4 +13,68 @@ tlačítko Twitter aktivní:	 #0b7bc1
 tlačítko Facebook:				 #3b5998
 tlačítko Facebook aktivní: #2b406e
 */
+body {
+    background-color: #b2bec3;
+    font-family: 'Nunito', sans-serif;
+    margin:0;
+ }
 
+.vizitka {
+    background-color: white;
+    position: relative;
+    width: 550px;
+    margin: 150px auto auto auto;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
+    }
+
+img {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    right: -75px;
+    top: -75px;
+    border-radius: 50% 50%;
+    border: 3px solid white;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);  
+}
+
+h1 {
+    color: #d63031;
+    margin: 0;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.popis {
+    margin: 30px 0;
+}
+
+p {
+    font-size: 18px;
+    text-align: justify;
+}
+
+.twitter {
+    background-color: #1da1f2;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+}
+
+.facebook {
+    background-color: #3b5998;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+a {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+}
