--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     background-color: #b2bec3;
     font-family: 'Nunito', sans-serif;
     margin:0;
- }
+}
 
 .vizitka {
     background-color: white;
@@ -27,7 +27,7 @@ body {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
-    }
+}
 
 img {
     width: 150px;
@@ -35,7 +35,7 @@ img {
     position: absolute;
     right: -75px;
     top: -75px;
-    border-radius: 50% 50%;
+    border-radius: 50%;
     border: 3px solid white;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);  
 }
@@ -57,25 +57,18 @@ p {
 }
 
 .twitter a {
-    display: block;
     background-color: #1da1f2;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 5px;
-    border-radius: 5px;
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
 }
 
 .facebook a {
-    display: block;
     background-color: #3b5998;
+}
+
+a {
+    display: block;
     text-align: center;
     padding: 10px;
-    border-radius: 5px;
+    margin-bottom: 5px;
     border-radius: 5px;
     color: white;
     font-size: 18px;
